Fix bad assert in StructureRareData::setObjectToStringValue https://bugs.webkit.org/show_bug.cgi?id=159171 <rdar://problem/26987355>

Reviewed by Mark Lam.

We should not have expected the generateConditionsForPrototypePropertyHit would succeed.
There are many reasons it might fail including that there is a proxy somewhere on the
prototype chain of the object.

* runtime/StructureRareData.cpp:
(JSC::StructureRareData::setObjectToStringValue):
* tests/stress/object-toString-with-proxy.js: Added.
(get target):

Canonical link: https://commits.webkit.org/177279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202528 268f45cc-cd09-0410-ab3c-d52691b4dbfc